# satellitetools

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  biophys_xarray.py  example_netcdf.nc  gee.py  gee_example.py  kmlkmz.py  mypy.ini  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yaml
aws_cog/: __init__.py  aws_cog.py
biophys/: __init__.py  biophys_xarray.py
common/: classes.py  raster.py  sentinel2.py  utils.py  vector.py  wrappers.py  xrtools.py
doc/source/: conf.py  index.rst
docs/source/: conf.py  index.md  requirements.txt
examples/: aws_cog_example.py  gee_example.py
gee/: __init__.py  gee.py
satellitetools/: __init__.py  aws.py  gee.py
satellitetools/biophys/: biophys.py
satellitetools/common/: classes.py  kmlkmz.py  raster.py  sentinel2.py  timeseries.py  vector.py  wrappers.py
src/satellitetools/aws_cog/: aws_cog.py
src/satellitetools/biophys/: biophys_xarray.py
src/satellitetools/common/: classes.py  kmlkmz.py  raster.py  sentinel2.py  vector.py  wrappers.py  xrtools.py
src/satellitetools/gee/: gee.py
tests/: script_to_profile.py  test_aws.py  test_biophys.py  test_data_consistency.py  test_gee.py  test_sentine2.py  test_timeseries.py  test_wrappers.py
tests/test_data/: s2_data_collection_gee.pkl  test_aws_10m.nc  test_aws_2022.nc  test_aws_20m.nc  test_gee_10m.nc  test_gee_2022.nc  test_gee_20m.nc
