[tool.poetry]
name = "satellitetools"
version = "1.1.0"
description = "Retrieve Sentinel-2 data and calculate biophysical parameters"
authors = ["Olli Nevalainen <olli.nevalainen.fmi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
pandas = ">=2.1.1"
numpy = ">=1.23.5"
geopandas = ">=0.13.2"
earthengine-api = ">=0.1.334"
xarray = ">=2022.12.0"
scipy = ">=1.9.3"
xmltodict = ">=0.13.0"
rasterio = ">=1.3.4"
pystac-client = ">=0.7.5"
gcloud = ">=0.18.3"

[tool.poetry.group.dev.dependencies]
mypy = ">=0.991"
black = ">=22.10.0"
flake8 = ">=6.0.0"
flake8-bandit = ">=4.1.1"
flake8-black = ">=0.3.5"
flake8-bugbear = ">=22.12.6"
isort = ">=5.10.1"
pre-commit = ">=2.20.0"
pytest = ">=8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
